ola-parser/src/testdata/syntaxTests/constants/redefinition_public_constant.sol
u256 constant c = 7;
u256 constant c = 8;
// ----
// DeclarationError 2333: (21-40): Identifier already declared.
